修改每个页面的顶部固定位置 新闻页面的自适应高度 新闻详情页面自适应高度

--- a/NewsInfo.html
+++ b/NewsInfo.html
@@ -167,6 +167,246 @@
 									<p>建成时间： 2009</p>
 								</a>
 							</li>
+							<li>
+								<a href="NewsDetail.html">
+									<span></span>
+									<p class="titley">Fairfield Inn by Marriott</p>
+									<p class="titley">New York LaGuardia Airport/Flushing Queens</p>
+									<p class="titlep">法拉盛费尔菲尔酒店</p>
+									<p>Location: Flushing,Queens,New York</p>
+									<p>Year Built: 2009</p>
+									<p>位置：纽约法拉盛</p>
+									<p>建成时间： 2009</p>
+								</a>
+							</li>
+							<li>
+								<a href="NewsDetail.html">
+									<span></span>
+									<p class="titley">Fairfield Inn by Marriott</p>
+									<p class="titley">New York LaGuardia Airport/Flushing Queens</p>
+									<p class="titlep">法拉盛费尔菲尔酒店</p>
+									<p>Location: Flushing,Queens,New York</p>
+									<p>Year Built: 2009</p>
+									<p>位置：纽约法拉盛</p>
+									<p>建成时间： 2009</p>
+								</a>
+							</li>
+							<li>
+								<a href="NewsDetail.html">
+									<span></span>
+									<p class="titley">Fairfield Inn by Marriott</p>
+									<p class="titley">New York LaGuardia Airport/Flushing Queens</p>
+									<p class="titlep">法拉盛费尔菲尔酒店</p>
+									<p>Location: Flushing,Queens,New York</p>
+									<p>Year Built: 2009</p>
+									<p>位置：纽约法拉盛</p>
+									<p>建成时间： 2009</p>
+								</a>
+							</li>
+							<li>
+								<a href="NewsDetail.html">
+									<span></span>
+									<p class="titley">Fairfield Inn by Marriott</p>
+									<p class="titley">New York LaGuardia Airport/Flushing Queens</p>
+									<p class="titlep">法拉盛费尔菲尔酒店</p>
+									<p>Location: Flushing,Queens,New York</p>
+									<p>Year Built: 2009</p>
+									<p>位置：纽约法拉盛</p>
+									<p>建成时间： 2009</p>
+								</a>
+							</li>
+							<li>
+								<a href="NewsDetail.html">
+									<span></span>
+									<p class="titley">Fairfield Inn by Marriott</p>
+									<p class="titley">New York LaGuardia Airport/Flushing Queens</p>
+									<p class="titlep">法拉盛费尔菲尔酒店</p>
+									<p>Location: Flushing,Queens,New York</p>
+									<p>Year Built: 2009</p>
+									<p>位置：纽约法拉盛</p>
+									<p>建成时间： 2009</p>
+								</a>
+							</li>
+							<li>
+								<a href="NewsDetail.html">
+									<span></span>
+									<p class="titley">Fairfield Inn by Marriott</p>
+									<p class="titley">New York LaGuardia Airport/Flushing Queens</p>
+									<p class="titlep">法拉盛费尔菲尔酒店</p>
+									<p>Location: Flushing,Queens,New York</p>
+									<p>Year Built: 2009</p>
+									<p>位置：纽约法拉盛</p>
+									<p>建成时间： 2009</p>
+								</a>
+							</li>
+							<li>
+								<a href="NewsDetail.html">
+									<span></span>
+									<p class="titley">Fairfield Inn by Marriott</p>
+									<p class="titley">New York LaGuardia Airport/Flushing Queens</p>
+									<p class="titlep">法拉盛费尔菲尔酒店</p>
+									<p>Location: Flushing,Queens,New York</p>
+									<p>Year Built: 2009</p>
+									<p>位置：纽约法拉盛</p>
+									<p>建成时间： 2009</p>
+								</a>
+							</li>
+							<li>
+								<a href="NewsDetail.html">
+									<span></span>
+									<p class="titley">Fairfield Inn by Marriott</p>
+									<p class="titley">New York LaGuardia Airport/Flushing Queens</p>
+									<p class="titlep">法拉盛费尔菲尔酒店</p>
+									<p>Location: Flushing,Queens,New York</p>
+									<p>Year Built: 2009</p>
+									<p>位置：纽约法拉盛</p>
+									<p>建成时间： 2009</p>
+								</a>
+							</li>
+							<li>
+								<a href="NewsDetail.html">
+									<span></span>
+									<p class="titley">Fairfield Inn by Marriott</p>
+									<p class="titley">New York LaGuardia Airport/Flushing Queens</p>
+									<p class="titlep">法拉盛费尔菲尔酒店</p>
+									<p>Location: Flushing,Queens,New York</p>
+									<p>Year Built: 2009</p>
+									<p>位置：纽约法拉盛</p>
+									<p>建成时间： 2009</p>
+								</a>
+							</li>
+							<li>
+								<a href="NewsDetail.html">
+									<span></span>
+									<p class="titley">Fairfield Inn by Marriott</p>
+									<p class="titley">New York LaGuardia Airport/Flushing Queens</p>
+									<p class="titlep">法拉盛费尔菲尔酒店</p>
+									<p>Location: Flushing,Queens,New York</p>
+									<p>Year Built: 2009</p>
+									<p>位置：纽约法拉盛</p>
+									<p>建成时间： 2009</p>
+								</a>
+							</li>
+							<li>
+								<a href="NewsDetail.html">
+									<span></span>
+									<p class="titley">Fairfield Inn by Marriott</p>
+									<p class="titley">New York LaGuardia Airport/Flushing Queens</p>
+									<p class="titlep">法拉盛费尔菲尔酒店</p>
+									<p>Location: Flushing,Queens,New York</p>
+									<p>Year Built: 2009</p>
+									<p>位置：纽约法拉盛</p>
+									<p>建成时间： 2009</p>
+								</a>
+							</li>
+							<li>
+								<a href="NewsDetail.html">
+									<span></span>
+									<p class="titley">Fairfield Inn by Marriott</p>
+									<p class="titley">New York LaGuardia Airport/Flushing Queens</p>
+									<p class="titlep">法拉盛费尔菲尔酒店</p>
+									<p>Location: Flushing,Queens,New York</p>
+									<p>Year Built: 2009</p>
+									<p>位置：纽约法拉盛</p>
+									<p>建成时间： 2009</p>
+								</a>
+							</li>
+							<li>
+								<a href="NewsDetail.html">
+									<span></span>
+									<p class="titley">Fairfield Inn by Marriott</p>
+									<p class="titley">New York LaGuardia Airport/Flushing Queens</p>
+									<p class="titlep">法拉盛费尔菲尔酒店</p>
+									<p>Location: Flushing,Queens,New York</p>
+									<p>Year Built: 2009</p>
+									<p>位置：纽约法拉盛</p>
+									<p>建成时间： 2009</p>
+								</a>
+							</li>
+							<li>
+								<a href="NewsDetail.html">
+									<span></span>
+									<p class="titley">Fairfield Inn by Marriott</p>
+									<p class="titley">New York LaGuardia Airport/Flushing Queens</p>
+									<p class="titlep">法拉盛费尔菲尔酒店</p>
+									<p>Location: Flushing,Queens,New York</p>
+									<p>Year Built: 2009</p>
+									<p>位置：纽约法拉盛</p>
+									<p>建成时间： 2009</p>
+								</a>
+							</li>
+							<li>
+								<a href="NewsDetail.html">
+									<span></span>
+									<p class="titley">Fairfield Inn by Marriott</p>
+									<p class="titley">New York LaGuardia Airport/Flushing Queens</p>
+									<p class="titlep">法拉盛费尔菲尔酒店</p>
+									<p>Location: Flushing,Queens,New York</p>
+									<p>Year Built: 2009</p>
+									<p>位置：纽约法拉盛</p>
+									<p>建成时间： 2009</p>
+								</a>
+							</li>
+							<li>
+								<a href="NewsDetail.html">
+									<span></span>
+									<p class="titley">Fairfield Inn by Marriott</p>
+									<p class="titley">New York LaGuardia Airport/Flushing Queens</p>
+									<p class="titlep">法拉盛费尔菲尔酒店</p>
+									<p>Location: Flushing,Queens,New York</p>
+									<p>Year Built: 2009</p>
+									<p>位置：纽约法拉盛</p>
+									<p>建成时间： 2009</p>
+								</a>
+							</li>
+							<li>
+								<a href="NewsDetail.html">
+									<span></span>
+									<p class="titley">Fairfield Inn by Marriott</p>
+									<p class="titley">New York LaGuardia Airport/Flushing Queens</p>
+									<p class="titlep">法拉盛费尔菲尔酒店</p>
+									<p>Location: Flushing,Queens,New York</p>
+									<p>Year Built: 2009</p>
+									<p>位置：纽约法拉盛</p>
+									<p>建成时间： 2009</p>
+								</a>
+							</li>
+							<li>
+								<a href="NewsDetail.html">
+									<span></span>
+									<p class="titley">Fairfield Inn by Marriott</p>
+									<p class="titley">New York LaGuardia Airport/Flushing Queens</p>
+									<p class="titlep">法拉盛费尔菲尔酒店</p>
+									<p>Location: Flushing,Queens,New York</p>
+									<p>Year Built: 2009</p>
+									<p>位置：纽约法拉盛</p>
+									<p>建成时间： 2009</p>
+								</a>
+							</li>
+							<li>
+								<a href="NewsDetail.html">
+									<span></span>
+									<p class="titley">Fairfield Inn by Marriott</p>
+									<p class="titley">New York LaGuardia Airport/Flushing Queens</p>
+									<p class="titlep">法拉盛费尔菲尔酒店</p>
+									<p>Location: Flushing,Queens,New York</p>
+									<p>Year Built: 2009</p>
+									<p>位置：纽约法拉盛</p>
+									<p>建成时间： 2009</p>
+								</a>
+							</li>
+							<li>
+								<a href="NewsDetail.html">
+									<span></span>
+									<p class="titley">Fairfield Inn by Marriott</p>
+									<p class="titley">New York LaGuardia Airport/Flushing Queens</p>
+									<p class="titlep">法拉盛费尔菲尔酒店</p>
+									<p>Location: Flushing,Queens,New York</p>
+									<p>Year Built: 2009</p>
+									<p>位置：纽约法拉盛</p>
+									<p>建成时间： 2009</p>
+								</a>
+							</li>
 						</ul>
 						<ul  class="news2" style="display: none;">
 							<li>
